# advent-of-code

./: .flake8  .gitignore  day01.py  day02.py  day03.py  day04.py  day06.py  pyproject.toml
2022/: day05.py
2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py
2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py
